# POS_semestralka

./: CMakeLists.txt  README.md  had.c  had.h  hra.c  hra.h  klient.c  klient.h  main.c  server.c  server.h  shared_memory.c  shared_memory.h  zdielane_prostriedky.h
